# LoSSETT

./: .gitignore  CalcDRDir_2D.py  CalcDR_Scalar.py  CalcPartitionIncrement.py  CalcScaleIncrements.py  DR_Dyn_Calc_DSEMG.py  DRdir_testplot.ipynb  Dl_stats.ipynb  ERA_Process_DYAMOND.ipynb  ERA_Processing_DYAMOND.py  LO_Plots.py  LoSSETT_DYN.ipynb  LoSSETT_DYN.py  LoSSETT_ERA5.py  LoSSETT_Plotting_Gen.ipynb  Plotting_LoSSETT_EWs.ipynb  README.md  TEST_run_lossett_dyn.sh  angle_incs_vectorisation_test.py  anims.py  make_uvw_cdo.sh  pyproject.toml  test_kernels.py  w_slice.py  xarray_roll_test.py
calc/: calc_inter_scale_transfers.py
control/: run_lossett_era5_0p5deg.py  run_lossett_era5_0p5deg_chunk_test.py  run_lossett_kscale_0p5deg.py  run_lossett_kscale_native.py  run_lossett_u-dc009.py  submit_calc_DR_indicator_DS_CTC5RAL.sh  submit_calc_DR_indicator_era5_0p5deg.sh  submit_calc_DR_indicator_kscale_native.sh  submit_calc_DR_indicator_kscale_native_00.sh  submit_calc_DR_indicator_kscale_native_12.sh  submit_calc_DR_indicator_kscale_native_debug.sh  submit_calc_DR_indicator_kscale_native_part_high.sh  submit_calc_DR_indicator_kscale_native_part_high_00.sh  submit_calc_DR_indicator_kscale_native_part_high_12.sh  submit_calc_DR_indicator_kscale_native_serial_00.sh  submit_calc_DR_indicator_u-dc009.sh  submit_calc_DR_indicator_u-dc009_LOTUS2.sh
filtering/: get_integration_kernels.py  kernels.py
plotting/: LoSSETT_Plotting_Gen.ipynb  Stats_Plotting_LoSSETT.ipynb  plot_DR_indicator.py  plot_DR_vs_ell.py
preprocessing/: preprocess_era5.py  preprocess_kscale.py  submit_preprocess_kscale_pp_to_nc.sh
src/lossett_control/: filter_kscale_0p5deg.py  filter_kscale_precip_0p1deg.py  run_lossett_NCEP-NCAR.py  run_lossett_u-dc009.py  (+8 more)
(+11 files in other folders)
