[project]
name = "lossett"
version = "0.1.0"
description = "A Python package for calculating inter-scale energy transfers in the atmosphere (and other fluids)."
authors = [
    {name = "Dan Shipley",email = "daniel.shipley@reading.ac.uk"},
    {name = "Elliot McKinnon-Gray",email="e.b.mckinnon-gray@pgr.reading.ac.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray",
    "iris",
    "numpy",
    "pandas",
    "datetime",
    #"mo_pack",
    "matplotlib",
    "cartopy",
    "mo_pack @ git+https://github.com/SciTools/mo_pack.git"
]

[project.urls]
repository = "https://github.com/ElliotMG/LoSSETT"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
